login and register features added

--- a/public/login.html
+++ b/public/login.html
@@ -6,23 +6,31 @@
     <title>Login page</title>
     <link rel="stylesheet" href="style.css">
 
+
 </head>
 <body>
     <div class = "login-box">
         <h1>Login</h1>
-            <form>
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username"placeholder="Username" required>
+            <form id ="login-form">
+                <label for="employee-id">Employee ID</label>
+                <input type="text" id="employee-id" name="employee-id" placeholder="Employee ID" required>
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password"placeholder="Password" required>
                 <input type="submit" value="Login">
                 <div class = "links-container"> 
-                    <a href="register.html">Register here</a><br>
+                    <a href="registration.html">Register here</a><br>
                     <a href="forgot-password.html">Reset password</a>
                 </div>
                 
             </form>
-    </div>
+             <script>
+        // Restrict input to digits only for the Employee ID field
+        document.getElementById("employee-id").addEventListener("input", function (event) {
+            this.value = this.value.replace(/\D/g, ""); // Remove any non-digit characters
+        });
+    </script>
+             <script src="/src/login.js"></script>
+    </div> 
 </body>
 
 </html>
